@@ -51,6 +51,7 @@ NEWS
   * print helpful error message on conditionals in global block (#1550)
   * decode url before matching in mod_rewrite (#1720)
   * fixed conditional patching of ldap filter (#1564)
+  * Match headers case insensitive in response (removing of X-{Sendfile,LIGHTTPD-*}, catching Date/Server)
 
 - 1.4.19 - 2008-03-10
 
